<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.store.activities.AddCustomerActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Information Sheet"
        android:textSize="20dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="102dp"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="102dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="Address Info."
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="Customer Info."
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Facebook :"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Email :"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Mobile No. : "
        android:textSize="15dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Last Name : "
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        android:layout_marginStart="29dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="First Name : "
        android:textSize="15dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/textView11"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView11" />

    <EditText
        android:id="@+id/txtFname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        android:textSize="15dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/txtLname"
        app:layout_constraintRight_toRightOf="@+id/txtLname"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtLname" />

    <EditText
        android:id="@+id/txtLname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        android:textSize="15dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/txtMobileNo"
        app:layout_constraintRight_toRightOf="@+id/txtMobileNo"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtMobileNo" />

    <EditText
        android:id="@+id/txtMobileNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/mobile"
        android:inputType="number"
        android:textSize="15dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintRight_toRightOf="@+id/txtEmail"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="15dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/txtFb"
        app:layout_constraintRight_toRightOf="@+id/txtFb"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtFb" />

    <EditText
        android:id="@+id/txtFb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/fb"
        android:inputType="textEmailAddress"
        android:textSize="15dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/txtAddress"
        app:layout_constraintRight_toRightOf="@+id/txtAddress"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="65dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtAddress" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Note : "
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/txtLandmark"
        android:layout_marginStart="29dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Landmarks : "
        android:textSize="15dp"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/textView15"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/textView15"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="City/Town : "
        android:textSize="15dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Brgy : "
        android:textSize="15dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Address : "
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_marginStart="13dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editText" />

    <EditText
        android:id="@+id/txtCityTown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/txtBrgy"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="49dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/txtLandmark"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="34dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/landmark"
        android:inputType="textMultiLine"
        android:textSize="15dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtCityTown"
        app:layout_constraintRight_toRightOf="@+id/txtCityTown"
        app:layout_constraintTop_toBottomOf="@+id/txtBrgy"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/txtNote"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/note"
        android:inputType="textMultiLine"
        android:textSize="15dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtLandmark"
        app:layout_constraintRight_toRightOf="@+id/txtLandmark"
        app:layout_constraintTop_toBottomOf="@+id/txtLandmark"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/txtBrgy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/brgy"
        android:inputType="textPersonName"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtCityTown"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtCityTown" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtBrgy"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtBrgy" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:text="SUBMIT"
        android:textSize="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtNote"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
