<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="16dp"
    tools:layout_editor_absoluteX="16dp">


    <EditText
        android:id="@+id/lblFname"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="16dp"
        android:background="@null"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="First name :"
        android:textColor="@color/cast_intro_overlay_background_color"
        android:textSize="12dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtCustomerheader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/txtCustomerheader"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/lblMname"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="Middle name :"
        android:textColor="@color/cast_intro_overlay_background_color"
        android:textSize="12dp"
        app:layout_constraintLeft_toLeftOf="@+id/lblFname"
        app:layout_constraintRight_toRightOf="@+id/lblFname"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/lblLname"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="43dp"
        app:layout_constraintTop_toTopOf="@+id/lblFname" />

    <EditText
        android:id="@+id/lblLname"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:background="@null"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="Last name :"
        android:textColor="@color/cast_intro_overlay_background_color"
        android:textSize="12dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtLname"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/lblMname"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/lblMname" />

    <EditText
        android:id="@+id/lblEmail"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:background="@null"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="Email :"
        android:textColor="@color/cast_intro_overlay_background_color"
        android:textSize="12dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtEmail"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/lblLname"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/lblLname" />

    <EditText
        android:id="@+id/lblMobileNumber"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:background="@null"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="Mobile Number :"
        android:textColor="@color/cast_intro_overlay_background_color"
        android:textSize="12dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtMobileNumber"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/lblEmail"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/lblEmail" />

    <EditText
        android:id="@+id/lblBdate"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:background="@null"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="Birthdate :"
        android:textColor="@color/cast_intro_overlay_background_color"
        android:textSize="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/lblMobileNumber"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/lblMobileNumber"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/lblMobileNumber" />

    <EditText
        android:id="@+id/lblUsername"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:background="@null"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="Username :"
        android:textColor="@color/cast_intro_overlay_background_color"
        android:textSize="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/lblBranch"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/lblBdate"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/lblBdate" />

    <EditText
        android:id="@+id/lblBranch"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:background="@null"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="Branch :"
        android:textColor="@color/cast_intro_overlay_background_color"
        android:textSize="12dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/txtUsername"
        app:layout_constraintRight_toRightOf="@+id/lblUsername"
        android:layout_marginTop="43dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="43dp"
        app:layout_constraintLeft_toLeftOf="@+id/lblBdate"
        app:layout_constraintTop_toTopOf="@+id/lblBdate" />

    <EditText
        android:id="@+id/lblPassword"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:background="@null"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="Password :"
        android:textColor="@color/cast_intro_overlay_background_color"
        android:textSize="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/lblUsername"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/lblUsername"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/lblUsername" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/cast_expanded_controller_ad_label_background_color"
        android:text="@string/Register"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="47dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/txtCustomerheader"
        android:layout_width="168dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        android:textSize="12dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp" />

    <EditText
        android:id="@+id/txtMname"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/middleName"
        android:inputType="textPersonName"
        android:textSize="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCustomerheader"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtCustomerheader"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtCustomerheader" />

    <EditText
        android:id="@+id/txtLname"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        android:textSize="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtMname"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtMname"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtMname" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textSize="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtLname"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtLname"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtLname" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="12dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtMobileNumber"
        android:layout_marginTop="94dp"
        app:layout_constraintTop_toBottomOf="@+id/txtMobileNumber"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtMobileNumber" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtUsername"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtUsername" />

    <EditText
        android:id="@+id/txtMobileNumber"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/mobile"
        android:inputType="number"
        android:textSize="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtEmail"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/txtBirthdate"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/bDate"
        android:inputType="date"
        android:textSize="12dp"
        app:layout_constraintLeft_toRightOf="@+id/lblBdate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMobileNumber"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Spinner
        android:id="@+id/branchSpinner"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/txtUsername"
        app:layout_constraintRight_toRightOf="@+id/txtBirthdate"
        android:layout_marginTop="43dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="43dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtBirthdate"
        app:layout_constraintTop_toTopOf="@+id/txtBirthdate" />

</android.support.constraint.ConstraintLayout>